{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 18,
  "lineage": "09878092-572f-cfdb-7de0-228fc450ab42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:internet-gateway/igw-0f80d3dd4b896ce59",
            "id": "igw-0f80d3dd4b896ce59",
            "owner_id": "292779133057",
            "region": "us-east-1",
            "tags": {
              "Name": "3tier-project-igw"
            },
            "tags_all": {
              "Name": "3tier-project-igw"
            },
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f80d3dd4b896ce59",
            "id": "r-rtb-027ba80732ab29e641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-027ba80732ab29e64",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:route-table/rtb-08b0373e4104aca75",
            "id": "rtb-08b0373e4104aca75",
            "owner_id": "292779133057",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "3tier-project-private-rt"
            },
            "tags_all": {
              "Name": "3tier-project-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:route-table/rtb-027ba80732ab29e64",
            "id": "rtb-027ba80732ab29e64",
            "owner_id": "292779133057",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "3tier-project-public-rt"
            },
            "tags_all": {
              "Name": "3tier-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06654f949ab2ad40f",
            "region": "us-east-1",
            "route_table_id": "rtb-08b0373e4104aca75",
            "subnet_id": "subnet-063fca41c2512d7e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ecc2299150ef134",
            "region": "us-east-1",
            "route_table_id": "rtb-08b0373e4104aca75",
            "subnet_id": "subnet-0f790671fbfd77769"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0838db773ba016518",
            "region": "us-east-1",
            "route_table_id": "rtb-027ba80732ab29e64",
            "subnet_id": "subnet-012e5b4bbc7973e80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0056b8e77169785ed",
            "region": "us-east-1",
            "route_table_id": "rtb-027ba80732ab29e64",
            "subnet_id": "subnet-0c614836b0b140ad1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:security-group/sg-02d477b82930d8c4c",
            "description": "Allow inbound HTTP to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d477b82930d8c4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "3tier-project-alb-sg",
            "name_prefix": "",
            "owner_id": "292779133057",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3tier-project-alb-sg"
            },
            "tags_all": {
              "Name": "3tier-project-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292779133057",
            "id": "sg-02d477b82930d8c4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:security-group/sg-0c087fa4b5b1732ca",
            "description": "Allow HTTP from ALB and SSH from allowed CIDR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c087fa4b5b1732ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from allowed CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d477b82930d8c4c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "3tier-project-ec2-sg",
            "name_prefix": "",
            "owner_id": "292779133057",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3tier-project-ec2-sg"
            },
            "tags_all": {
              "Name": "3tier-project-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292779133057",
            "id": "sg-0c087fa4b5b1732ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:security-group/sg-08494413eb0f6d053",
            "description": "Allow NFS from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08494413eb0f6d053",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from EC2",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c087fa4b5b1732ca"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "3tier-project-efs-sg",
            "name_prefix": "",
            "owner_id": "292779133057",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3tier-project-efs-sg"
            },
            "tags_all": {
              "Name": "3tier-project-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292779133057",
            "id": "sg-08494413eb0f6d053",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:security-group/sg-0634c573ca3971809",
            "description": "Allow MySQL from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0634c573ca3971809",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c087fa4b5b1732ca"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "3tier-project-rds-sg",
            "name_prefix": "",
            "owner_id": "292779133057",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "3tier-project-rds-sg"
            },
            "tags_all": {
              "Name": "3tier-project-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292779133057",
            "id": "sg-0634c573ca3971809",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:subnet/subnet-063fca41c2512d7e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063fca41c2512d7e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292779133057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "3tier-project-private-1"
            },
            "tags_all": {
              "Name": "3tier-project-private-1"
            },
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292779133057",
            "id": "subnet-063fca41c2512d7e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:subnet/subnet-0f790671fbfd77769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f790671fbfd77769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "292779133057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "3tier-project-private-2"
            },
            "tags_all": {
              "Name": "3tier-project-private-2"
            },
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292779133057",
            "id": "subnet-0f790671fbfd77769",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:subnet/subnet-012e5b4bbc7973e80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012e5b4bbc7973e80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292779133057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "3tier-project-public-1"
            },
            "tags_all": {
              "Name": "3tier-project-public-1"
            },
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292779133057",
            "id": "subnet-012e5b4bbc7973e80",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:subnet/subnet-0c614836b0b140ad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c614836b0b140ad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292779133057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "3tier-project-public-2"
            },
            "tags_all": {
              "Name": "3tier-project-public-2"
            },
            "vpc_id": "vpc-03ec4b1ed518bb80b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "292779133057",
            "id": "subnet-0c614836b0b140ad1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292779133057:vpc/vpc-03ec4b1ed518bb80b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069fe7a087391f0e1",
            "default_route_table_id": "rtb-01d658ce1bf541004",
            "default_security_group_id": "sg-05aa87ecc4837c863",
            "dhcp_options_id": "dopt-0bb05db79816057c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ec4b1ed518bb80b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d658ce1bf541004",
            "owner_id": "292779133057",
            "region": "us-east-1",
            "tags": {
              "Name": "3tier-project-vpc"
            },
            "tags_all": {
              "Name": "3tier-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}